location + tests
